--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,26 @@
 # Command: cp .env.example .env
 # Then edit: nano .env
 # 
-# Based on ERPNext v15.83.0 (latest stable as of October 2025)
+# Based on ERPNext v16.0.1 (released January 2026)
 # Optimized for production deployment with host-level Nginx reverse proxy
+# Reference: https://github.com/frappe/frappe_docker
+# =================================================================
+
+# =================================================================
+# GENERATE SECURE PASSWORDS
+# =================================================================
+# Run these commands to generate secure random passwords:
+#
+# Generate all secrets at once:
+#   echo "ADMIN_PASSWORD=$(openssl rand -base64 16 | tr -d '=+/' | cut -c1-16)"
+#   echo "DB_ROOT_PASSWORD=$(openssl rand -base64 24 | tr -d '=+/' | cut -c1-24)"
+#
+# Or generate individually:
+#   openssl rand -base64 16 | tr -d '=+/' | cut -c1-16  # For ADMIN_PASSWORD
+#   openssl rand -base64 24 | tr -d '=+/' | cut -c1-24  # For DB_ROOT_PASSWORD
+#
+# Alternative using /dev/urandom:
+#   tr -dc 'A-Za-z0-9!@#$%' </dev/urandom | head -c 20; echo
 # =================================================================
 
 # =================================================================
@@ -15,12 +33,10 @@
 # =================================================================
 # Docker Compose project name - used as prefix for containers and networks
 # Use lowercase letters, numbers, and hyphens only
-# This helps organize multiple ERPNext deployments on same server
 COMPOSE_PROJECT_NAME=erpnext-prod
 
 # Data storage path - where all persistent data will be stored
-# Ensure this directory exists and has proper permissions
-# This path will contain: sites/, logs/, db/, redis_queue/
+# Ensure this directory exists and has proper permissions (see SETUP.md)
 DATA_PATH=./data
 
 # Timezone for all services (affects logs, scheduled tasks, etc.)
@@ -28,82 +44,74 @@ DATA_PATH=./data
 TIMEZONE=UTC
 
 # =================================================================
-# DOCKER USER CONFIGURATION - IMPORTANT
-# =================================================================
-# Docker container user ID and group ID
-# This MUST match a user on your host system for proper file permissions
-# Default: 1000:1000 (common first user on Linux systems)
-# Change if UID 1000 is not available or conflicts on your server
-DOCKER_USER_ID=1000
-DOCKER_GROUP_ID=1000
-
-# Example: If you created user 'erpnext' with UID 1001:
-# DOCKER_USER_ID=1001
-# DOCKER_GROUP_ID=1001
-# 
-# To find your user's UID: id -u username
-# To find your user's GID: id -g username
-
-# =================================================================
 # ERPNEXT APPLICATION CONFIGURATION - REQUIRED
 # =================================================================
 # ERPNext version - use specific version for production stability
-# Latest stable: v15.83.0 (updated October 15, 2025)
-# Check https://hub.docker.com/r/frappe/erpnext/tags for newer versions
-ERPNEXT_VERSION=15.83.0
+# v16.0.1 is the latest stable release as of January 2026
+# Check https://hub.docker.com/r/frappe/erpnext/tags for available versions
+#
+# Available version formats:
+# - Exact version: 16.0.1 (recommended for production)
+# - Major branch: v16 (tracks latest v16.x.x)
+# - Latest: latest (not recommended for production)
+ERPNEXT_VERSION=16.0.1
+
+# Image pull policy
+# always: Always pull latest image (good for version tracking branches)
+# if-not-present: Use local cache if available
+# never: Only use local images
+PULL_POLICY=always
+
+# Restart policy for services
+# unless-stopped: Restart unless explicitly stopped (recommended)
+# on-failure: Restart only on non-zero exit
+# always: Always restart
+RESTART_POLICY=unless-stopped
 
 # Primary domain name for your ERPNext installation
 # This must match your DNS configuration and SSL certificate
-# Example: erp.yourcompany.com, erpnext.example.org
+# Example: erp.yourcompany.com
 # CRITICAL: This will be used to create the ERPNext site
 SITE_NAME=your-domain.com
 
-# ERPNext administrator password
+# ERPNext administrator password (minimum 8 characters)
 # This will be the password for the Administrator user
-# Minimum 12 characters, use strong password with mixed case, numbers, symbols
-ADMIN_PASSWORD=your_admin_password_min_12_chars_change_this
+# Use a strong password with mixed case, numbers, and symbols
+# Generate with: openssl rand -base64 16 | tr -d '=+/' | cut -c1-16
+ADMIN_PASSWORD=CHANGE_ME_GENERATE_SECURE_PASSWORD
+
+# Site name header configuration
+# Default: $$host (resolves site by HTTP Host header)
+# Set to specific site name if you want to override host-based resolution
+# Useful for development or when accessing by IP address
+FRAPPE_SITE_NAME_HEADER=$$host
 
 # =================================================================
 # DATABASE CONFIGURATION - REQUIRED
 # =================================================================
-# MariaDB version - use LTS version for stability
-# 10.11 is the current LTS with long-term support until 2028
-DB_VERSION=10.11
+# MariaDB version - use version officially tested with ERPNext v16
+# 10.6 is the LTS version recommended by Frappe for v16
+# Note: MariaDB 10.11 also works but 10.6 is more widely tested
+DB_VERSION=10.6
 
 # MariaDB root password - use a very strong password
 # This is the master password for database administration
-# Minimum 20 characters with mixed case, numbers, and symbols
-DB_ROOT_PASSWORD=your_very_secure_root_password_here_min_20_chars_change_this
+# Generate with: openssl rand -base64 24 | tr -d '=+/' | cut -c1-24
+DB_ROOT_PASSWORD=CHANGE_ME_GENERATE_SECURE_PASSWORD
 
-# Application database password - different from root password
-# This is used by ERPNext to connect to the database
-# Should be different from root password for security
-DB_PASSWORD=your_secure_app_database_password_here_change_this
-
-# Database name for ERPNext
-# Convention: use descriptive name (e.g., erpnext_production, erp_company)
-DB_NAME=erpnext_production
-
-# Database user for ERPNext application
-# This user will have full access to the ERPNext database only
-DB_USER=erpnext_user
-
-# Database host - use service name from docker-compose.yml
+# Database host and port
 # Default: 'db' (matches the database service name)
-# Only change if you're using external database
+# Only change if using external database
 DB_HOST=db
-
-# Database port - standard MySQL/MariaDB port
-# Keep default unless you have specific networking requirements
 DB_PORT=3306
 
 # =================================================================
 # DATABASE PERFORMANCE TUNING - OPTIONAL
 # =================================================================
 # MariaDB InnoDB buffer pool size - critical for performance
-# Set to 70-80% of dedicated database server RAM
-# For shared servers, set to 25-50% of total RAM
-# Examples: 1G, 2G, 4G, 8G
+# Set to 50-70% of available RAM for dedicated database
+# For shared servers, set to 25-40% of total RAM
+# Examples: 512M, 1G, 2G, 4G
 DB_INNODB_BUFFER_POOL_SIZE=2G
 
 # InnoDB log file size - affects write performance
@@ -112,149 +120,188 @@ DB_INNODB_BUFFER_POOL_SIZE=2G
 DB_INNODB_LOG_FILE_SIZE=256M
 
 # Maximum database connections
-# Increase for high-traffic sites, decrease for resource-constrained servers
-# Each connection uses memory, balance with available RAM
+# Increase for high-traffic sites (each connection uses ~2-3MB RAM)
 DB_MAX_CONNECTIONS=200
-
-# Query cache size - improves read performance for repeated queries
-# Set to 0 to disable, or 64M-256M for moderate traffic
-# Note: Query cache is deprecated in newer MySQL versions
-DB_QUERY_CACHE_SIZE=64M
 
 # =================================================================
 # REDIS CONFIGURATION - OPTIONAL
 # =================================================================
-# Redis version - use stable version with security updates
-# Version 7 includes performance improvements and security fixes
+# Redis version - stable version with security updates
+# Version 7 Alpine provides good performance with small footprint
 REDIS_VERSION=7-alpine
 
 # Redis cache memory limit - for session and object caching
-# Should be sufficient for your concurrent user count
-# Examples: 256mb, 512mb, 1gb, 2gb
+# Should handle your concurrent user sessions
+# Rule of thumb: 1MB per active user + overhead
 REDIS_CACHE_MAXMEMORY=512mb
 
 # Redis queue memory limit - for background jobs
-# Usually smaller than cache, jobs are processed quickly
-# Examples: 128mb, 256mb, 512mb
+# Usually smaller than cache as jobs are processed quickly
 REDIS_QUEUE_MAXMEMORY=256mb
 
 # =================================================================
-# APPLICATION PERFORMANCE TUNING - OPTIONAL
+# NGINX FRONTEND CONFIGURATION - OPTIONAL
 # =================================================================
-# ERPNext backend worker processes
-# Recommended: Number of CPU cores available to container
-# More workers = better concurrent request handling
-BACKEND_WORKERS=4
+# Frontend port for host reverse proxy connection
+# Your host Nginx should proxy to this port
+# Change if port 8080 conflicts with existing applications
+FRONTEND_PORT=8080
 
-# Gunicorn worker class - affects performance characteristics
-# sync: Simple, stable, good for most workloads
-# gevent: Async, better for I/O-heavy workloads
-# tornado: WebSocket support (if needed)
-WORKER_CLASS=sync
+# Upstream real IP configuration (for proper client IP logging)
+# IMPORTANT: Set this to the Docker gateway IP or reverse proxy IP
+# From the container's perspective, requests from host Nginx come from the gateway IP
+#
+# HOW TO DETERMINE THIS VALUE:
+# 1. For host-level Nginx (most common - same server as Docker):
+#    REQUIRED: Find your Docker gateway IP after starting containers:
+#    
+#    Option A - Simple grep method:
+#      docker network inspect erpnext-prod_network | grep Gateway
+#    
+#    Option B - Direct from container:
+#      docker inspect erpnext-dmla-prod_frontend --format '{{range .NetworkSettings.Networks}}{{.Gateway}}{{end}}'
+#    
+#    Option C - JSON parsing:
+#      docker network inspect erpnext-prod_network -f '{{range .IPAM.Config}}{{.Gateway}}{{end}}'
+#    
+#    Typical values: 172.18.0.1, 172.17.0.1, or similar
+#    You MUST update this after creating the network!
+#
+# 2. For external reverse proxy (different server):
+#    - Use the actual IP address of your reverse proxy server
+#    - Example: 192.168.1.10 or 10.0.0.5
+#
+# 3. To trust all proxies (less secure, testing/development only):
+#    - Set to: 0.0.0.0/0
+#
+# TEMPORARY: Set to 0.0.0.0/0 for initial setup, then update with actual gateway IP
+UPSTREAM_REAL_IP_ADDRESS=0.0.0.0/0
 
-# Request timeout in seconds
+# Header containing the real client IP
+UPSTREAM_REAL_IP_HEADER=X-Forwarded-For
+
+# Whether to recursively search for real IP
+# off: Use first trusted IP from header
+# on: Search through proxy chain for real IP
+UPSTREAM_REAL_IP_RECURSIVE=off
+
+# Proxy read timeout in seconds
 # Increase for complex reports or large data operations
-# Default 300 (5 minutes) should be sufficient for most operations
-BACKEND_TIMEOUT=300
+PROXY_READ_TIMEOUT=120
 
 # Maximum file upload size
-# Increase if you need to upload large files (documents, images, etc.)
-# Format: 50m (50 megabytes), 1g (1 gigabyte)
-MAX_UPLOAD_SIZE=50m
-
-# Proxy timeout for frontend nginx
-# Should match or exceed BACKEND_TIMEOUT
-PROXY_TIMEOUT=300
+# Increase if you need to upload large files
+# Format: 50m (megabytes), 1g (gigabyte)
+CLIENT_MAX_BODY_SIZE=50m
 
 # =================================================================
 # CONTAINER RESOURCE LIMITS - RECOMMENDED
 # =================================================================
-# ERPNext Backend Resource Limits
-# Adjust based on your server capacity and expected load
-BACKEND_CPU_LIMIT=2.0              # Number of CPU cores
-BACKEND_MEMORY_LIMIT=4G            # Maximum memory usage
-BACKEND_CPU_RESERVE=0.5            # Reserved CPU cores
-BACKEND_MEMORY_RESERVE=1G          # Reserved memory
+# Adjust based on your server specifications and expected load
+# These limits prevent any single service from consuming all resources
 
-# ERPNext Frontend Resource Limits
-# Frontend is lighter as it only serves static files and proxies requests
+# ERPNext Backend Resource Limits
+BACKEND_CPU_LIMIT=2.0
+BACKEND_MEMORY_LIMIT=4G
+BACKEND_CPU_RESERVE=0.5
+BACKEND_MEMORY_RESERVE=1G
+
+# ERPNext Frontend Resource Limits (Nginx - lighter workload)
 FRONTEND_CPU_LIMIT=1.0
 FRONTEND_MEMORY_LIMIT=1G
-FRONTEND_CPU_RESERVE=0.25
-FRONTEND_MEMORY_RESERVE=256M
 
 # WebSocket Server Resource Limits
-# WebSocket handles real-time communications
 WEBSOCKET_CPU_LIMIT=0.5
 WEBSOCKET_MEMORY_LIMIT=512M
 
+# Queue Worker Resource Limits
+QUEUE_CPU_LIMIT=1.0
+QUEUE_MEMORY_LIMIT=2G
+
+# Scheduler Resource Limits
+SCHEDULER_CPU_LIMIT=0.5
+SCHEDULER_MEMORY_LIMIT=1G
+
 # Database Resource Limits
-# Database typically needs significant resources for good performance
 DB_CPU_LIMIT=2.0
 DB_MEMORY_LIMIT=4G
 DB_CPU_RESERVE=0.5
-DB_MEMORY_RESERVE=1G
+DB_MEMORY_RESERVE=512M
 
 # Redis Resource Limits
-# Separate limits for cache and queue Redis instances
 REDIS_CPU_LIMIT=1.0
 REDIS_CACHE_MEMORY_LIMIT=1G
 REDIS_QUEUE_MEMORY_LIMIT=512M
-
-# =================================================================
-# NETWORK CONFIGURATION - ADVANCED
-# =================================================================
-# Frontend port for host reverse proxy connection
-# Change this if port 8080 conflicts with existing applications
-# Your host Nginx should proxy to this port
-FRONTEND_PORT=8080
-
-# Docker network subnets - change if conflicts with existing networks
-# Frontend network: Connects to host reverse proxy
-FRONTEND_SUBNET=172.20.0.0/24
-
-# Backend network: Internal service communication only
-BACKEND_SUBNET=172.21.0.0/24
 
 # =================================================================
 # SECURITY CONFIGURATION - RECOMMENDED
 # =================================================================
 # Development mode - NEVER enable in production
 # Enables debug features and detailed error messages
-# WARNING: Exposes sensitive information, only use in development
+# WARNING: Exposes sensitive information
 DEVELOPER_MODE=0
-
-# Enable detailed logging for troubleshooting
-# Set to 1 only when debugging issues, impacts performance
-DEBUG_LOGGING=0
 
 # =================================================================
 # LOGGING CONFIGURATION - RECOMMENDED
 # =================================================================
 # Docker log rotation settings
-# Maximum size before log rotation (prevents disk space issues)
+# Maximum size before log rotation
 LOG_MAX_SIZE=10m
 
 # Number of rotated log files to keep
-# Balances disk usage with debugging capability
 LOG_MAX_FILES=5
+
+# =================================================================
+# OPTIONAL: DOCKER SECRETS SUPPORT
+# =================================================================
+# Use Docker secrets for database password instead of environment variable
+# Path to the file containing the database password
+# DB_PASSWORD_SECRETS_FILE=/run/secrets/db_password
+
+# =================================================================
+# OPTIONAL: EXTERNAL SERVICES
+# =================================================================
+# Use these if you have external Redis or Database servers
+
+# External Redis (uncomment and configure if using external Redis)
+# REDIS_CACHE=external-redis:6379
+# REDIS_QUEUE=external-redis:6380
+
+# External Database (uncomment and configure if using external DB)
+# DB_HOST=external-db.example.com
+# DB_PORT=3306
+
+# =================================================================
+# OPTIONAL: SSL/HTTPS (Only if using Traefik, not needed for host Nginx)
+# =================================================================
+# Let's Encrypt email for certificate notifications
+# LETSENCRYPT_EMAIL=admin@example.com
+
+# Sites for SSL certificates (Traefik format)
+# SITES=`erp.example.com`
 
 # =================================================================
 # USAGE INSTRUCTIONS
 # =================================================================
 # 1. Copy this file: cp .env.example .env
-# 2. Edit the .env file with your actual values
-# 3. Ensure all REQUIRED variables are set
-# 4. Generate strong passwords for all password fields
-# 5. Update SITE_NAME to your actual domain
-# 6. Configure your DNS to point to your server
-# 7. Run: docker compose up -d
-# 8. Monitor logs: docker compose logs -f
-# 
-# Security reminders:
-# - Never commit the .env file to version control
-# - Use strong, unique passwords for all accounts
-# - Regularly update passwords and review access
-# - Monitor logs for suspicious activity
-# - Keep Docker images updated
+# 2. Edit the .env file with your actual values:
+#    - Set SITE_NAME to your domain
+#    - Set ADMIN_PASSWORD to a strong password
+#    - Set DB_ROOT_PASSWORD to a strong password
+# 3. Create data directories:
+#    mkdir -p data/{sites,logs,db,redis_queue}
+#    sudo chown -R 1000:1000 data/
+# 4. Start services: docker compose up -d
+# 5. Monitor startup: docker compose logs -f create-site
+# 6. Access your site: http://localhost:8080
+#
+# For production with SSL:
+# - Configure host Nginx with SSL (see SETUP.md)
+# - Point DNS to your server
+# - Update SITE_NAME to match your domain
+#
+# For email configuration:
+# - Email settings are configured in ERPNext after deployment
+# - See SETUP.md for SMTP configuration instructions
+# - The SMTP variables above are for reference when configuring
 # =================================================================
